--- a/style/style.css
+++ b/style/style.css
@@ -32,3 +32,55 @@
     font-weight: 700;
     color: whitesmoke;
 }
+/* donate section */
+.donate-section{
+    text-align: center;
+    margin: 80px 0 80px 0;
+}
+.donate-title{
+    font-weight: 900;
+    font-size: 40px;
+
+}
+.donate-description{
+    margin: 20px 250px;
+    color: #757575;
+}
+.donate-btn{
+    width: 120px;
+    height: 80px;
+    font-weight: 800;
+    font-size: 30px;
+    color: #696969;
+    border-radius: 5px;
+    border: none;
+}
+.donate-btn-secondary{
+    width: 120px;
+    height: 80px;
+    font-weight: 900;
+    font-size: 30px;
+    color: rgb(231, 81, 81);
+    background-color: #ffe1e1;
+    border-radius: 5px;
+    border: 2px solid #ff9696;
+}
+.donate-input-container{
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.donate-input{
+    width: 600px;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 15px;
+    font-weight: 500;
+    border-bottom: 2px solid #aeaeae;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    margin-bottom: 20px;
+}
