--- a/style/style.css
+++ b/style/style.css
@@ -91,7 +91,7 @@
 .donate-plan-container{
     display: flex;
     gap: 20px;
-    margin: 20px 250px 20px 250px;
+    margin: 20px 200px 20px 200px;
 }
 .donate-plan{
     text-align: left;
@@ -112,4 +112,38 @@
 }
 .donate-plan-description{
     color: #aeaeae;
+}
+/* show case */
+.showcase-section{
+    margin: 50px 150px 50px 150px;
+}
+.showcase-container{
+    display: flex;
+    
+}
+.showcase-content{
+    padding-top: 90px;
+}
+.showcase-img{
+    width: 350px;
+    height: 450px;
+    object-fit:none;
+    filter: grayscale(100%) sepia(80%) saturate(2) brightness(70%);
+    /* border-radius: 30px; */
+}
+.showcase-description{
+    margin: 10px 50px 20px 0;
+    color: #757575;
+}
+.showcase-btn{
+    width: 150px;
+    height: 35px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(231, 81, 81);
+    font-weight: 700;
+    color: whitesmoke;
+}
+.ext-margin{
+    margin-left: 150px;
 }
