--- a/style/style.css
+++ b/style/style.css
@@ -147,3 +147,53 @@
 .ext-margin{
     margin-left: 150px;
 }
+/* get update section */
+.get-update{
+    text-align: center;
+}
+.sub-form{
+    background-color: rgb(249, 234, 215);
+    height: 200px;
+    margin: 0 150px 0 150px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+    border-radius: 5px;
+}
+.sub-form input[type="email"]{
+    background-color: #bebebe;
+    border: none;
+    font-size: 15px;
+    padding: 10px 0 10px 10px;
+    width: 300px;
+    font-weight: bold;
+    border-radius: 5px 0 0 5px;
+}
+.sub-form input[type="submit"]{
+    background-color: rgb(231, 81, 81);
+    color: whitesmoke;
+    font-weight: 550;
+    border: none;
+    font-size: 15px;
+    padding: 10px;
+    border-radius:0 5px 5px 0;
+}
+footer{
+    background-color: black;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px 0;
+}
+.f-header{
+    font-family: 'Lobster', cursive;
+    color: rgb(231, 81, 81);
+    font-weight: 500;
+}
+.f-description{
+    color: #aeaeae;
+    font-size: 13px;
+    margin-top: 15px;
+}
