--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
 .header{
     height: 100vh;
     width: 100%;
-    background-image: url('/images/donation5.jpg'), linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9));
+    background-image: url('./donation5.jpg'), linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9));
     background-blend-mode: overlay;
 }
 .header-content{
@@ -123,6 +123,7 @@
 }
 .showcase-content{
     padding-top: 90px;
+    margin-bottom: 20px;
 }
 .showcase-img{
     width: 350px;
